--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,8 +57,8 @@ dependencies {
     // Import the BoM for the Firebase platform
     implementation platform('com.google.firebase:firebase-bom:30.0.1')
     implementation 'com.google.firebase:firebase-storage-ktx'
-    //Timber
-    implementation 'com.jakewharton.timber:timber:5.0.1'
+    // Image crop
+  //  implementation 'com.github.CanHub:Android-Image-Cropper:4.2.1'
     // Declare the dependency for the Cloud Firestore library
     implementation 'com.google.firebase:firebase-firestore-ktx'
 
