--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,12 +24,11 @@
         </activity>
         <activity
             android:name=".authentication.AuthActivity"
-            android:exported="false"/>
+            android:exported="false"
+            android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"/>
         <activity
             android:name=".MainActivity"
-            android:exported="false"
-            android:label="@string/app_name">
-
+            android:exported="false">
         </activity>
     </application>
 
