add select location

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-android-extensions'
     id 'com.google.gms.google-services'
     id 'androidx.navigation.safeargs.kotlin'
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
     id 'kotlin-kapt'
 }
 
@@ -37,6 +38,9 @@ android {
         viewBinding true
         dataBinding true
     }
+
+    def localProperties = new Properties()
+    localProperties.load(new FileInputStream(rootProject.file("local.properties")))
 }
 
 dependencies {
@@ -68,7 +72,12 @@ dependencies {
     implementation 'com.github.CanHub:Android-Image-Cropper:4.2.1'
     // Declare the dependency for the Cloud Firestore library
     implementation 'com.google.firebase:firebase-firestore-ktx'
-
+    // google maps api
+    implementation 'com.google.android.gms:play-services-maps:18.0.2'
+    // google play service
+    implementation "com.google.android.gms:play-services-location:19.0.1"
+    // google maps places api
+    implementation 'com.google.android.libraries.places:places:2.6.0'
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.1'
