--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,4 +83,6 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.1'
 
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
+    implementation 'androidx.core:core-splashscreen:1.0.0-beta02'
+
 }
